--- a/vi/index.html
+++ b/vi/index.html
@@ -4138,7 +4138,7 @@ pre[class*="language-"] {
         rounded-3xl duration-200 outline outline-2 outline-primary shadow-xl
         hover:scale-110 hover:rotate-6 md:hover:rotate-0 hover:outline-8 hover:shadow-2xl
       "
-      src="https://avatars.githubusercontent.com/u/43980777"
+      src="https://codeberg.org/avatars/46ce1f9c36aeaf725cc13b3e99735120"
       alt="About Me"
     />
   </a>
@@ -4194,7 +4194,7 @@ pre[class*="language-"] {
         
   :class="authorHover ? 'md:translate-x-6 md:-translate-y-2 md:opacity-10' : ''"
 
-        href="https://github.com/NNBnh"
+        href="https://codeberg.org/NNB"
       >
         Các dự án
       </a>
