--- a/vi/index.html
+++ b/vi/index.html
@@ -5016,6 +5016,11 @@ pre[class*="language-"] {
     href="/blog/vi/tags/godot/"
   >#godot</a>
 
+  <a
+    class="link-mono"
+    href="/blog/vi/tags/game_dev/"
+  >#game_dev</a>
+
 
       </div>
     </div>
